force-app/main/default/objects/SBS_Case_Asset__c/SBS_Case_Asset__c.object-meta.xml
<CustomObject>
    <description>Join between Cases and their 1 or more Assets (Service Details)</description>
    <label>Case Asset</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Case Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>