force-app/main/default/objects/SBS_Case_Asset__c/fields/Asset_Header__c.field-meta.xml
<CustomField>
    <fullName>Asset_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Header</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.RecordTypeId</field>
            <operation>equals</operation>
            <value>Service Header</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Case Assets (Asset Header)</relationshipLabel>
    <relationshipName>Case_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>