force-app/main/default/objects/SBS_Case_Asset__c/fields/Asset_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Service_Type__c</fullName>
    <formula>AssetId__r.Service_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Service Type</label>
    <type>Text</type>
</CustomField>