force-app/main/default/objects/SBS_Case_Asset__c/fields/AssetId__c.field-meta.xml
<CustomField>
    <fullName>AssetId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset Detail</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.RecordTypeId</field>
            <operation>equals</operation>
            <value>Service Detail</value>
        </filterItems>
        <filterItems>
            <field>Asset.ParentId</field>
            <operation>equals</operation>
            <valueField>$Source.Asset_Header__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Case Assets</relationshipLabel>
    <relationshipName>Case_Assets1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>