force-app/main/default/objects/SBS_Case_Asset__c/fields/IsManual__c.field-meta.xml
<CustomField>
    <fullName>IsManual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is created to keep track if Case  Assets Creation is done manually by clicking on Add Case Assets</description>
    <label>IsManual</label>
    <type>Checkbox</type>
</CustomField>