force-app/main/default/objects/SBS_Case_Asset__c/fields/New_Client_Price__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Price__c</fullName>
    <label>New Client Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>