force-app/main/default/objects/SBS_Case_Asset__c/fields/Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Occurrence__c</fullName>
    <formula>TEXT(AssetId__r.Occurrence_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occurrence</label>
    <type>Text</type>
</CustomField>