force-app/main/default/objects/SBS_Case_Asset__c/fields/Quantity_Override__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Override__c</fullName>
    <label>Quantity Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>