force-app/main/default/objects/SBS_Case_Asset__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INTNAL</fullName>
                <label>Per PM</label>
            </value>
            <value>
                <fullName>OTHR</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>.INTNAL</fullName>
                <isActive>false</isActive>
                <label>.INTNAL</label>
            </value>
            <value>
                <fullName>.OTHR</fullName>
                <isActive>false</isActive>
                <label>.OTHR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>