force-app/main/default/objects/SBS_Case_Asset__c/fields/Vendor_Id_of_Asset_Detail__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Id_of_Asset_Detail__c</fullName>
    <description>Holds Vendor Id</description>
    <formula>AssetId__r.Supplier__c</formula>
    <label>Vendor Id of Asset Detail</label>
    <type>Text</type>
</CustomField>